--- a/index.html
+++ b/index.html
@@ -103,13 +103,14 @@
         #label9 { top: 10%; left: 38%; transform: translate(-50%, -50%) rotate(270deg); }
         #subs-left-container {
             position: absolute;
-            top: 400px;
+            top: 350px;
             left: 45%;
             transform: translateX(-145px);
             background-color: #333;
             padding: 5px 10px;
             border-radius: 8px;
             border: 1px solid #000;
+	    box-shadow: 0 4px 6px rgba(5, 5, 5, 5); /* 2D Schatten für Tiefe */
             font-size: 1rem;
             color: #fff;
         }
@@ -127,18 +128,19 @@
             display: none; /* Verstecke den Container standardmäßig */
         }
         #spin-counter-container {
-            position: absolute;
-            top: 400px;
-            left: 68%;
-            transform: translateX(-145px);
-            background-color: #333;
-            padding: 5px 10px;
-            border-radius: 8px;
-            border: 1px solid #000;
-            font-size: 1rem;
-            color: #fff;
-            display: none; /* Counter verstecken */
-        }
+    position: absolute;
+    top: 350px;
+    left: 75%;
+    transform: translateX(-145px);
+    background-color: #333;
+    padding: 5px 15px;
+    border-radius: 8px; /* Runde Ecken für einen weicheren Look */
+    border: 1px solid #000; /* Dunkle Umrandung für besseren Kontrast */
+    box-shadow: 0 4px 6px rgba(5, 5, 5, 5); /* 2D Schatten für Tiefe */
+    font-size: 1rem; /* Größere Schriftgröße für bessere Lesbarkeit */
+    color: #fff;
+    display: none; /* Counter verstecken */
+}
         #spinButton {
             margin-top: 20px;
             padding: 10px 20px;
@@ -277,7 +279,7 @@
             updateSubCount();
         }
 
-        setInterval(simulateSub, 3000);
+        setInterval(simulateSub, 1000);
 
         async function handleRequest() {
             const response = await fetch('/show-subs');
