--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             margin: 20px auto;
             width: 300px;
             height: 300px;
-            display: none; /* Rad verstecken */
+            display: none;
         }
         #wheel {
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            border: 5px solid #000; /* Innerer schwarzer Rand des Glücksrads */
+            border: 5px solid #000;
             position: relative;
             background: conic-gradient(
                 #ffecb3 0% 11%, #ffecb3 11% 11.1%,
@@ -38,47 +38,44 @@
                 #ce93d8 77.7% 88.7%, #ce93d8 88.7% 88.8%,
                 #ffcc80 88.8% 100%
             );
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Schatten für 2D-Optik */
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
         }
         #pointer {
             position: absolute;
             top: -7%; 
-            left: 52%; /* In der Mitte des Rads platzieren */
-            transform: translateX(-50%); /* Horizontal zentrieren */
+            left: 52%;
+            transform: translateX(-50%);
             width: 0;
             height: 0;
             border-left: 20px solid transparent;
             border-right: 20px solid transparent;
-            border-top: 40px solid #000; /* Pfeil nach unten zeigen */
+            border-top: 40px solid #000;
             z-index: 10;
         }
         #gift {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 0.8rem; /* Kleinere Größe, anpassen nach Bedarf */
-    color: #000; /* Schwarze Farbe für das Geschenk */
-    z-index: 5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 60px; /* Angepasste Breite */
-    height: 60px; /* Angepasste Höhe */
-}
-
-#gift img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 0.8rem;
+            color: #000;
+            z-index: 5;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 60px;
+            height: 60px;
+        }
+        #gift img {
+            max-width: 100%;
+            max-height: 100%;
         }
         .fa-gift {
             position: relative;
-            animation: spin 10s linear infinite; /* Langsame Rotation */
+            animation: spin 10s linear infinite;
         }
         .fa-gift::before {
-            content: "\f06b"; /* Unicode für das Geschenk-Icon */
+            content: "\f06b";
             font-family: "Font Awesome 5 Free";
             font-weight: 900;
         }
@@ -88,18 +85,18 @@
         }
         .wheel-label {
             position: absolute;
-            width: 80px; /* Breite des Labels */
-            height: 80px; /* Höhe des Labels */
+            width: 80px;
+            height: 80px;
             background: transparent;
             color: #000;
             font-size: 24px;
             text-align: center;
-            line-height: 80px; /* Gleicher Wert wie die Höhe für vertikale Zentrierung */
+            line-height: 80px;
             transform-origin: center center;
             display: flex;
             align-items: center;
-            justify-content: center; /* Zentriert den Text horizontal */
-            transform: translate(-50%, -50%) rotate(0deg); /* Entfernen der Rotation hier */
+            justify-content: center;
+            transform: translate(-50%, -50%) rotate(0deg);
         }
         #subs-left-container {
             position: absolute;
@@ -110,7 +107,7 @@
             padding: 5px 10px;
             border-radius: 8px;
             border: 1px solid #000;
-            box-shadow: 0 4px 6px rgba(5, 5, 5, 0.5); /* 2D Schatten für Tiefe */
+            box-shadow: 0 4px 6px rgba(5, 5, 5, 0.5);
             font-size: 1rem;
             color: #fff;
         }
@@ -125,7 +122,7 @@
             border: 1px solid #000;
             font-size: 1rem;
             color: #fff;
-            display: none; /* Verstecke den Container standardmäßig */
+            display: none;
         }
         #spin-counter-container {
             position: absolute;
@@ -134,12 +131,12 @@
             transform: translateX(-145px);
             background-color: #333;
             padding: 5px 15px;
-            border-radius: 8px; /* Runde Ecken für einen weicheren Look */
-            border: 1px solid #000; /* Dunkle Umrandung für besseren Kontrast */
-            box-shadow: 0 4px 6px rgba(5, 5, 5, 0.5); /* 2D Schatten für Tiefe */
-            font-size: 1rem; /* Größere Schriftgröße für bessere Lesbarkeit */
+            border-radius: 8px;
+            border: 1px solid #000;
+            box-shadow: 0 4px 6px rgba(5, 5, 5, 0.5);
+            font-size: 1rem;
             color: #fff;
-            display: none; /* Counter verstecken */
+            display: none;
         }
         #spinButton {
             margin-top: 20px;
@@ -150,7 +147,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            display: none; /* Button verstecken */
+            display: none;
         }
         #spinButton:hover {
             background-color: #555;
@@ -206,7 +203,7 @@
             labels.forEach(label => {
                 const element = document.getElementById(label.id);
                 const angle = label.angle;
-                const radius = 120; // Radius des Kreises, in dem sich die Labels befinden
+                const radius = 120;
                 const x = Math.cos((angle - 90) * (Math.PI / 180)) * radius;
                 const y = Math.sin((angle - 90) * (Math.PI / 180)) * radius;
 
@@ -224,8 +221,8 @@
         const spinCounterContainer = document.getElementById('spin-counter-container');
         const subsLeftContainer = document.getElementById('subs-left-container');
         const totalSubsContainer = document.getElementById('total-subs-container');
-        let totalSubs = 0; // Unsichtbarer Counter für alle verschenkten Subs
-        let spinCounter = 0; // Counter für offene Drehungen
+        let totalSubs = 0;
+        let spinCounter = 0;
         let currentRotation = 0;
         let isSpinning = false;
         let totalSubsTimeout;
@@ -254,7 +251,7 @@
         function updateButtonVisibility() {
             if (spinCounter > 0) {
                 spinButton.style.display = 'block';
-                spinButton.disabled = false; // Button aktivieren, wenn er sichtbar ist
+                spinButton.disabled = false;
             } else {
                 spinButton.style.display = 'none';
             }
@@ -268,9 +265,9 @@
             spinCounterElement.textContent = spinCounter;
             updateButtonVisibility();
 
-            const rotationSpeed = 10; // Dauer der Drehung in Sekunden
-            const slowDownSpeed = 2; // Extra Zeit am Ende in Sekunden
-            const baseRotation = 3600; // Basisrotation für mehrere Umdrehungen
+            const rotationSpeed = 10;
+            const slowDownSpeed = 2;
+            const baseRotation = 3600;
             const randomRotation = Math.floor(Math.random() * 360);
             currentRotation += baseRotation + randomRotation;
 
