--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            border: 5px solid #000;
+            border: 5px solid #000; /* Schwarzer Rand, dicker */
             position: relative;
             background: conic-gradient(
                 #ffecb3 0% 11%, #ffecb3 11% 11.1%,
@@ -38,7 +38,7 @@
                 #ce93d8 77.7% 88.7%, #ce93d8 88.7% 88.8%,
                 #ffcc80 88.8% 100%
             );
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 0 2px #600000; /* Dünnerer dunkelroter Rand */
         }
         #pointer {
             position: absolute;
@@ -52,10 +52,21 @@
             border-top: 40px solid #000;
             z-index: 10;
         }
-        #gift {
+        #center-dot { /* Hinzugefügt */
             position: absolute;
             top: 50%;
             left: 50%;
+            width: 10px; /* Größe des Punkts */
+            height: 10px; /* Größe des Punkts */
+            background-color: #000; /* Schwarze Farbe */
+            border-radius: 50%; /* Runde Form */
+            transform: translate(-50%, -50%);
+            z-index: 5; /* Vor anderen Elementen positionieren */
+        }
+        #gift {
+            position: absolute;
+            top: 50%;
+            left: 49.5%;
             transform: translate(-50%, -50%);
             font-size: 0.8rem;
             color: #000;
@@ -63,8 +74,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 60px;
-            height: 60px;
+            width: 90px;
+            height: 90px;
         }
         #gift img {
             max-width: 100%;
@@ -171,6 +182,7 @@
     <div id="wheel-container">
         <div id="pointer"></div>
         <div id="wheel">
+            <div id="center-dot"></div> <!-- Hinzugefügt -->
             <div id="gift">
                 <img src="compass_cutout.png" alt="Kompass" />
             </div>
