--- a/index.html
+++ b/index.html
@@ -22,24 +22,26 @@
             display: none;
         }
         #wheel {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            border: 5px solid #000; /* Schwarzer Rand, dicker */
-            position: relative;
-            background: conic-gradient(
-                #ffecb3 0% 11%, #ffecb3 11% 11.1%,
-                #ffab91 11.1% 22.1%, #ffab91 22.1% 22.2%,
-                #80deea 22.2% 33.2%, #80deea 33.2% 33.3%,
-                #f48fb1 33.3% 44.3%, #f48fb1 44.3% 44.4%,
-                #a5d6a7 44.4% 55.4%, #a5d6a7 55.4% 55.5%,
-                #90caf9 55.5% 66.5%, #90caf9 66.5% 66.6%,
-                #ff8a65 66.6% 77.6%, #ff8a65 77.6% 77.7%,
-                #ce93d8 77.7% 88.7%, #ce93d8 88.7% 88.8%,
-                #ffcc80 88.8% 100%
-            );
-            box-shadow: 0 0 0 2px #600000; /* Dünnerer dunkelroter Rand */
-        }
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 5px solid #000; /* Schwarzer Rand, dicker */
+    position: relative;
+    background: conic-gradient(
+        #ffecb3 0% 11%, #ffecb3 11% 11.1%,
+        #ffab91 11.1% 22.1%, #ffab91 22.1% 22.2%,
+        #80deea 22.2% 33.2%, #80deea 33.2% 33.3%,
+        #f48fb1 33.3% 44.3%, #f48fb1 44.3% 44.4%,
+        #a5d6a7 44.4% 55.4%, #a5d6a7 55.4% 55.5%,
+        #90caf9 55.5% 66.5%, #90caf9 66.5% 66.6%,
+        #ff8a65 66.6% 77.6%, #ff8a65 77.6% 77.7%,
+        #ce93d8 77.7% 88.7%, #ce93d8 88.7% 88.8%,
+        #ffcc80 88.8% 100%
+    );
+    box-shadow: 0 0 0 2px #600000, 0 4px 10px rgba(55, 55, 55, 55); /* Roter Rand + Schatten */
+}
+
+
         #pointer {
             position: absolute;
             top: -7%; 
@@ -277,8 +279,8 @@
             spinCounterElement.textContent = spinCounter;
             updateButtonVisibility();
 
-            const rotationSpeed = 10;
-            const slowDownSpeed = 2;
+            const rotationSpeed = 4;
+            const slowDownSpeed = 9;
             const baseRotation = 3600;
             const randomRotation = Math.floor(Math.random() * 360);
             currentRotation += baseRotation + randomRotation;
