--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div id="wheel">
             <div id="center-dot"></div> <!-- Hinzugefügt -->
             <div id="gift">
-                <img src="compass_cutout.png" alt="Kompass" />
+                <img src="compass_cutout2.0.png" alt="Kompass" />
             </div>
             <div class="wheel-label" id="label1">A</div>
             <div class="wheel-label" id="label2">B</div>
