--- a/index.html
+++ b/index.html
@@ -116,25 +116,25 @@
             top: 350px;
             left: 45%;
             transform: translateX(-145px);
-            background-color: #333;
+            background-color: #000; /* Hintergrund schwarz */
             padding: 5px 10px;
             border-radius: 8px;
             border: 1px solid #000;
             box-shadow: 0 4px 6px rgba(5, 5, 5, 0.5);
             font-size: 1rem;
-            color: #fff;
+            color: #fff; /* Text weiß */
         }
         #total-subs-container {
             position: absolute;
             top: 450px;
             left: 45%;
             transform: translateX(-145px);
-            background-color: #333;
+            background-color: #000; /* Hintergrund schwarz */
             padding: 5px 10px;
             border-radius: 8px;
             border: 1px solid #000;
             font-size: 1rem;
-            color: #fff;
+            color: #fff; /* Text weiß */
             display: none;
         }
         #spin-counter-container {
