--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@
             <div id="gift">
                 <img src="compass_cutout2.0.png" alt="Kompass" />
             </div>
-            <div class="wheel-label" id="label1">A</div>
-            <div class="wheel-label" id="label2">B</div>
-            <div class="wheel-label" id="label3">C</div>
-            <div class="wheel-label" id="label4">D</div>
-            <div class="wheel-label" id="label5">E</div>
-            <div class="wheel-label" id="label6">F</div>
-            <div class="wheel-label" id="label7">?</div>
-            <div class="wheel-label" id="label8">H</div>
-            <div class="wheel-label" id="label9">I</div>
+            <div class="wheel-label" id="label1"></div>
+            <div class="wheel-label" id="label2"></div>
+            <div class="wheel-label" id="label3"></div>
+            <div class="wheel-label" id="label4"></div>
+            <div class="wheel-label" id="label5"></div>
+            <div class="wheel-label" id="label6"></div>
+            <div class="wheel-label" id="label7"></div>
+            <div class="wheel-label" id="label8"></div>
+            <div class="wheel-label" id="label9"></div>
         </div>
     </div>
     <button id="spinButton">Drehen</button>
